Fix issue with char encoding in test